--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -6,6 +6,10 @@ on:
       - 'v*'
       - 'version-*'
       - 'release-*'
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
